[gd_scene load_steps=3 format=3 uid="uid://bvfukhttm5rou"]

[ext_resource type="Script" path="res://quiz.gd" id="1_mbmfe"]
[ext_resource type="Theme" uid="uid://ddehtswk1no7r" path="res://main_theme.tres" id="2_s3jxo"]

[node name="Quiz" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mbmfe")

[node name="Question" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 350.0
offset_top = 50.0
offset_right = 850.0
offset_bottom = 150.0
theme = ExtResource("2_s3jxo")
theme_override_font_sizes/normal_font_size = 22
text = "Question"
fit_content = true
scroll_active = false

[node name="Answer0" type="Button" parent="."]
layout_mode = 0
offset_left = 200.0
offset_top = 200.0
offset_right = 500.0
offset_bottom = 300.0
theme = ExtResource("2_s3jxo")
text = "Answer1"

[node name="Answer1" type="Button" parent="."]
layout_mode = 0
offset_left = 700.0
offset_top = 200.0
offset_right = 1000.0
offset_bottom = 300.0
theme = ExtResource("2_s3jxo")
text = "Answer2"

[node name="Answer2" type="Button" parent="."]
layout_mode = 0
offset_left = 200.0
offset_top = 400.0
offset_right = 500.0
offset_bottom = 500.0
theme = ExtResource("2_s3jxo")
text = "Answer3"

[node name="Answer3" type="Button" parent="."]
layout_mode = 0
offset_left = 700.0
offset_top = 400.0
offset_right = 1000.0
offset_bottom = 500.0
theme = ExtResource("2_s3jxo")
text = "Answer4"

[node name="Health" type="Label" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 50.0
offset_right = 110.0
offset_bottom = 80.0
text = "Health: "

[connection signal="pressed" from="Answer0" to="." method="_on_answer_0_pressed"]
[connection signal="pressed" from="Answer1" to="." method="_on_answer_1_pressed"]
[connection signal="pressed" from="Answer2" to="." method="_on_answer_2_pressed"]
[connection signal="pressed" from="Answer3" to="." method="_on_answer_3_pressed"]
